--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/seventh?characterEncoding=utf8&useSSL=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/tan?characterEncoding=utf8&useSSL=true&serverTimezone=Asia/Shanghai
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
 mybatis:
-  mapper-locations: classpath:/resources/mappers/*.xml
-  type-aliases-package: com.example.demo.dao
+  mapper-locations: classpath:mapper/*Mapper.xml
+  type-aliases-package: com.example.mapper
 server:
   port: 8080
   servlet:
