--- a/testdemo/src/main/resources/application.yml
+++ b/testdemo/src/main/resources/application.yml
@@ -5,9 +5,11 @@ spring:
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
 mybatis:
-  mapper-locations: classpath:mapper/*Mapper.xml
-  type-aliases-package: com.example.mapper
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.example.dao
 server:
   port: 8080
   servlet:
-    context-path: /demo
+    context-path: /testdemo
+
+
